Added first source

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -1,26 +1,43 @@
-@book{Knuth1998,
- author = {Knuth, Donald E.},
- title = {The art of computer programming,  volume 3: (2nd ed.) sorting and searching},
- year = {1998},
- publisher = {Addison Wesley Longman Publishing Co., Inc.},
- address = {Redwood City, CA, USA}
+% This file was created with JabRef 2.10.
+% Encoding: Cp1252
+
+
+@Article{Creeger2009,
+  Title                    = {{CTO Roundtable: Cloud Computing}},
+  Author                   = {Creeger, Mache},
+  Journal                  = {Communications of the ACM},
+  Year                     = {2009},
+  Number                   = {8},
+  Pages                    = {50--56},
+  Volume                   = {52}
 }
 
-@book{Pollefliet2011,
-  author = {Pollefliet, Leen},
-  title = {Schrijven van verslag tot eindwerk: do's en don'ts},
-  year = {2011},
-  publisher = {Academia Press},
-  address = {Gent}
+@Book{Townsend2014,
+  Title                    = {Getting Started with Bluetooth Low Energy},
+  Author                   = {Kevin Townsend, Carles Cufì, Akiba, Robert Davidson},
+  Editor                   = {Brian Sawyer, Mike Loukides},
+  Publisher                = {O'Reilly Media, Inc.},
+  Year                     = {2014},
+
+  Owner                    = {Jan},
+  Timestamp                = {2016.02.02}
 }
 
-@article{Creeger2009,
-  author = {Creeger, Mache},
-  journal = {Communications of the ACM},
-  number = {8},
-  pages = {50--56},
-  title = {{CTO Roundtable: Cloud Computing}},
-  volume = {52},
-  year = {2009}
+@Book{Knuth1998,
+  Title                    = {The art of computer programming, volume 3: (2nd ed.) sorting and searching},
+  Author                   = {Knuth, Donald E.},
+  Publisher                = {Addison Wesley Longman Publishing Co., Inc.},
+  Year                     = {1998},
+
+  Address                  = {Redwood City, CA, USA}
+}
+
+@Book{Pollefliet2011,
+  Title                    = {Schrijven van verslag tot eindwerk: do's en don'ts},
+  Author                   = {Pollefliet, Leen},
+  Publisher                = {Academia Press},
+  Year                     = {2011},
+
+  Address                  = {Gent}
 }
 
