Made the cover Dutch as this is required

--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -91,16 +91,19 @@
 \newcommand{\instelling}{AllThingsTalk}
 
 % De titel van het rapport/bachelorproef
-\newcommand{\titel}{Bluetooth Low Energy wearables in an Internet of Things cloud infrastructure using a smartphone as gateway}
+\newcommand{\titel}{Bluetooth Low Energy wearables in een Internet of Things cloud-infrastructuur met behulp van een smartphone als gateway}
+\newcommand{\titleEN}{Bluetooth Low Energy wearables in an Internet of Things cloud infrastructure using a smartphone as gateway}
 
 % Datum van indienen
 \newcommand{\datum}{29 mei 2015}
 
 % Faculteit
-\newcommand{\faculteit}{Faculty `Bedrijf en Organisatie'}
+\newcommand{\faculteit}{Faculteit `Bedrijf en Organisatie'}
+\newcommand{\faculty}{Faculty `Bedrijf en Organisatie'}
 
 % Soort rapport
-\newcommand{\rapporttype}{Thesis submitted in fulfillment of the requirements for the degree of\\Bachelor in applied computer sciences}
+\newcommand{\rapporttype}{Scriptie voorgedragen tot het bekomen van de graad\\Bachelor in de toegepaste informatica}
+\newcommand{\reporttype}{Thesis submitted in fulfillment of the requirements for the degree of\\Bachelor in applied computer sciences}
 
 % Academiejaar
 \newcommand{\academiejaar}{2015-2016}
@@ -109,7 +112,8 @@
 %  - 1e semester = 1e examenperiode
 %  - 2e semester = 2e examenperiode
 %  - tweede zit = 3e examenperiode
-\newcommand{\examenperiode}{Second exam period}
+\newcommand{\examenperiode}{Tweede examenperiode}
+\newcommand{\examperiod}{Second exam period}
 
 %%========================================================================
 %% Inhoud document
@@ -132,12 +136,12 @@
     \vfill
     \student\\[3.5cm]
     \rapporttype\\[2cm]
-    Promoter:\\
+    Promotor:\\
     \promotor\\
-    Co-promoter:\\
+    Co-promotor:\\
     \copromotor\\[2.5cm]
-    Affiliation: \instelling\\[.5cm]
-    Academic year: \academiejaar\\[.5cm]
+    Instelling: \instelling\\[.5cm]
+    Academiejaar: \academiejaar\\[.5cm]
     \examenperiode
     \endgroup
 
@@ -156,18 +160,18 @@
 
     \begingroup
     \rmfamily
-    \faculteit\\[3cm]
-    \titel
+    \faculty\\[3cm]
+    \titleEN
     \vfill
     \student\\[3.5cm]
-    \rapporttype\\[2cm]
+    \reporttype\\[2cm]
     Promoter:\\
     \promotor\\
     Co-promoter:\\
     \copromotor\\[2.5cm]
     Affiliation: \instelling\\[.5cm]
     Academic year: \academiejaar\\[.5cm]
-    \examenperiode
+    \examperiod
     \endgroup
 
   \end{center}
