Added some references to read later

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -12,6 +12,61 @@
   Volume                   = {52}
 }
 
+@Article{gomez2011modeling,
+  Title                    = {Modeling the maximum throughput of Bluetooth low energy in an error-prone link},
+  Author                   = {Gomez, Carles and Demirkol, Ilker and Paradells, Josep},
+  Journal                  = {Communications Letters, IEEE},
+  Year                     = {2011},
+  Number                   = {11},
+  Pages                    = {1187--1189},
+  Volume                   = {15},
+
+  Publisher                = {IEEE}
+}
+
+@Article{gomez2012overview,
+  Title                    = {Overview and evaluation of bluetooth low energy: An emerging low-power wireless technology},
+  Author                   = {Gomez, Carles and Oller, Joaquim and Paradells, Josep},
+  Journal                  = {Sensors},
+  Year                     = {2012},
+  Number                   = {9},
+  Pages                    = {11734--11753},
+  Volume                   = {12},
+
+  Publisher                = {Molecular Diversity Preservation International}
+}
+
+@Article{gomez2010wireless,
+  Title                    = {Wireless home automation networks: A survey of architectures and technologies},
+  Author                   = {Gomez, Carles and Paradells, Josep},
+  Journal                  = {IEEE Communications Magazine},
+  Year                     = {2010},
+  Number                   = {6},
+  Pages                    = {92--101},
+  Volume                   = {48},
+
+  Publisher                = {IEEE Press}
+}
+
+@Article{haartsen2000bluetooth,
+  Title                    = {The Bluetooth radio system},
+  Author                   = {Haartsen, Jaap C},
+  Journal                  = {Personal Communications, IEEE},
+  Year                     = {2000},
+  Number                   = {1},
+  Pages                    = {28--36},
+  Volume                   = {7},
+
+  Publisher                = {IEEE}
+}
+
+@Article{kamath2010measuring,
+  Title                    = {Measuring bluetooth low energy power consumption},
+  Author                   = {Kamath, Sandeep and Lindh, Joakim},
+  Journal                  = {Texas instruments application note AN092, Dallas},
+  Year                     = {2010}
+}
+
 @Book{Townsend2014,
   Title                    = {Getting Started with Bluetooth Low Energy},
   Author                   = {Kevin Townsend, Carles Cufì, Akiba, Robert Davidson},
@@ -32,6 +87,26 @@
   Address                  = {Redwood City, CA, USA}
 }
 
+@Article{martelli2014bluetooth,
+  Title                    = {Bluetooth low energy},
+  Author                   = {Martelli, Flavia},
+  Journal                  = {University of Bologna},
+  Year                     = {2014},
+  Volume                   = {25}
+}
+
+@Article{omre2010bluetooth,
+  Title                    = {Bluetooth low energy: wireless connectivity for medical monitoring},
+  Author                   = {Omre, Alf Helge and Keeping, Steven},
+  Journal                  = {Journal of diabetes science and technology},
+  Year                     = {2010},
+  Number                   = {2},
+  Pages                    = {457--463},
+  Volume                   = {4},
+
+  Publisher                = {SAGE Publications}
+}
+
 @Book{Pollefliet2011,
   Title                    = {Schrijven van verslag tot eindwerk: do's en don'ts},
   Author                   = {Pollefliet, Leen},
@@ -39,5 +114,17 @@
   Year                     = {2011},
 
   Address                  = {Gent}
+}
+
+@Article{zheng2006toward,
+  Title                    = {Toward secure low rate wireless personal area networks},
+  Author                   = {Zheng, Jianliang and Lee, Myung J and Anshel, Michael},
+  Journal                  = {Mobile Computing, IEEE Transactions on},
+  Year                     = {2006},
+  Number                   = {10},
+  Pages                    = {1361--1373},
+  Volume                   = {5},
+
+  Publisher                = {IEEE}
 }
 
