Added some chapters, sections and subsections to the LaTeX document to outline the general structure

--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -37,8 +37,6 @@
 \usepackage{lmodern}
 \usepackage{textcomp}
 
-\usepackage{lipsum}          % Voor vultekst (lorem ipsum)
-
 %%---------- Layout ------------------------------------------------------
 
 % hoofdingen, enz.
@@ -184,14 +182,12 @@
 % thesis) synthese van het document. In ons geval beschrijf je kort de
 % probleemstelling en de context, de onderzoeksvragen, de aanpak en de
 % resultaten.
-  \lipsum[1-4]
 \end{abstract}
 
 \chapter*{Preface}
 \label{ch:preface}
 
 % TODO: Vergeet ook niet te bedanken wie je geholpen/gesteund/... heeft
-\lipsum[5-6]
 
 \tableofcontents
 
@@ -203,20 +199,22 @@
 \chapter{Introduction}
 \label{ch:introduction}
 
-De inleiding moet de lezer alle nodige informatie verschaffen om het onderwerp te begrijpen zonder nog externe werken te moeten raadplegen \citep{Pollefliet2011}. Dit is een doorlopende tekst die gebaseerd is op al wat je over het onderwerp gelezen hebt (literatuuronderzoek).
+% De inleiding moet de lezer alle nodige informatie verschaffen om het onderwerp te begrijpen zonder nog externe werken te moeten raadplegen \citep{Pollefliet2011}. Dit is een doorlopende tekst die gebaseerd is op al wat je over het onderwerp gelezen hebt (literatuuronderzoek).
 
-Je verwijst bij elke bewering die je doet, vakterm die je introduceert, enz. naar je bronnen. In \LaTeX{} kan dat met het commando \texttt{$\backslash${cite\{\}}} of \texttt{$\backslash${citep\{\}}}. Als argument van het commando geef je de ``sleutel'' van een ``record'' in een bibliografische databank in het Bib\TeX{}-formaat (een tekstbestand). Als je expliciet naar de auteur verwijst in de zin, gebruik je \texttt{$\backslash${}cite\{\}}.
-Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backslash${}citep\{\}}. Hieronder een voorbeeld van elk.
+% Je verwijst bij elke bewering die je doet, vakterm die je introduceert, enz. naar je bronnen. In \LaTeX{} kan dat met het commando \texttt{$\backslash${cite\{\}}} of \texttt{$\backslash${citep\{\}}}. Als argument van het commando geef je de ``sleutel'' van een ``record'' in een bibliografische databank in het Bib\TeX{}-formaat (een tekstbestand). Als je expliciet naar de auteur verwijst in de zin, gebruik je \texttt{$\backslash${}cite\{\}}.
+% Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backslash${}citep\{\}}. Hieronder een voorbeeld van elk.
 
-\cite{Knuth1998} schreef een van de standaardwerken over sorteer- en zoekalgoritmen. Experten zijn het erover eens dat cloud computing een interessante opportuniteit vormen, zowel voor gebruikers als voor dienstverleners op vlak van informatietechnologie~\citep{Creeger2009}.
+% \cite{Knuth1998} schreef een van de standaardwerken over sorteer- en zoekalgoritmen. Experten zijn het erover eens dat cloud computing een interessante opportuniteit vormen, zowel voor gebruikers als voor dienstverleners op vlak van informatietechnologie~\citep{Creeger2009}.
 
-\section{Probleemstelling en Onderzoeksvragen}
-\label{sec:onderzoeksvragen}
+\section{Problem statement and research questions}
+\label{sec:problemdefinition}
+
+\section{AllThingsTalk}
+\label{sec:allthingstalk}
 
 % TODO: Wees zo concreet mogelijk bij het formuleren van je
 % onderzoeksvra(a)g(en). Een onderzoeksvraag is trouwens iets waar nog
 % niemand op dit moment een antwoord heeft (voor zover je kan nagaan).
-\lipsum[7-20]
 
 \chapter{Methodology}
 \label{ch:methodology}
@@ -226,14 +224,57 @@ Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backsla
 % op deze manier te werk gegaan bent. Je moet kunnen aantonen dat je de best
 % mogelijke manier toegepast hebt om een antwoord te vinden op de
 % onderzoeksvraag.
-\lipsum[21-25]
 
-\chapter{Corpus}
-\label{ch:corpus}
 
 %% TODO: de structuur en titel van deze hoofdstukken hangen af van je
 % eigen onderzoek. Elke fase in je onderzoek kan een eigen hoofdstuk krijgen. Kies telkens een gepaste titel. ``Corpus'' is *GEEN* gepaste titel
-\lipsum[26-75]
+\chapter{Bluetooth Low Energy}
+\label{ch:ble}
+
+\section{What is Bluetooth Low Energy}
+\label{sec:whatis}
+
+\section{Key differences between classic Bluetooth}
+\label{sec:differencesclassic}
+
+\subsection{A new technology emerges}
+\label{subsec:newtechnology}
+
+\subsection{Limitations of Bluetooth Low Energy}
+\label{subsec:limitations}
+
+\section{Bluetooth configurations}
+\label{sec:bleconfigurations}
+
+\section{How low energy is achieved}
+\label{sec:lowenergy}
+
+\section{The Bluetooth Low Energy protocol}
+\label{sec:protocolbasics}
+
+\section{Generic Access Protocol}
+\label{sec:gap}
+
+\section{Generic Attribute Protocol}
+\label{sec:gatt}
+
+\subsection{GATT profiles}
+\label{subsec:profiles}
+
+\subsection{GATT services}
+\label{subsec:services}
+
+\subsection{Characteristics}
+\label{subsec:characteristics}
+
+\subsection{Descriptors}
+\label{subsec:descriptors}
+
+\chapter{Building your own server or using an existing one}
+\label{ch:server}
+
+\chapter{Android programming}
+\label{ch:android}
 
 \chapter{Conclusion}
 \label{ch:conclusion}
@@ -242,7 +283,7 @@ Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backsla
 % onderzoeksvra(a)g(en). Reflecteer kritisch over het resultaat. Zijn er
 % zaken die nog niet duidelijk zijn? Heeft het ondezoek geleid tot nieuwe
 % vragen die uitnodigen tot verder onderzoek?
-\lipsum[76-80]
+
 
 
 \bibliographystyle{apa}
