--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -309,8 +309,8 @@
 \section{Descriptors}
 \label{sec:descriptors}
 
-\chapter{Implementing a basic server}
-\label{ch:server}
+\chapter{Why Bluetooth Low Energy and Internet of Things}
+\label{ch:BLEIOT}
 
 \chapter{Android programming}
 \label{ch:android}
